--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,22 @@
-# ==================================
-# UNSW-NB15 Imbalance Study
-# Python Dependencies
-# ==================================
-
 # Core Data Science
-pandas>=2.0.0
-numpy>=1.24.0
+pandas==2.3.3
+numpy==2.2.4
 
 # Machine Learning
-scikit-learn>=1.3.0
-xgboost>=2.0.0
+scikit-learn==1.7.2
+xgboost==3.1.2
 
 # Imbalanced Learning
-imbalanced-learn>=0.11.0
+imbalanced-learn==0.14.1
 
 # Visualization
-matplotlib>=3.7.0
-seaborn>=0.12.0
+matplotlib==3.10.1
+seaborn==0.13.2
 
 # Configuration
-pyyaml>=6.0
+PyYAML==6.0.3
 
 # Utilities
-joblib>=1.3.0
-tqdm>=4.65.0
-
-# Development (optional)
-jupyter>=1.0.0
+joblib==1.5.2
+tqdm==4.67.1
+python-dotenv==1.2.1
