--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -12,6 +12,12 @@ data:
   # These are non-predictive or cause data leakage
   drop_columns:
     - "id"        # Row identifier
+    - "srcip"     # Source IP (Leakage/High Cardinality)
+    - "dstip"     # Destination IP (Leakage/High Cardinality)
+    - "sport"     # Source Port (Noise)
+    - "dsport"    # Destination Port (Noise)
+    - "stime"     # Start Time (Temporal Leakage)
+    - "ltime"     # Last Time (Temporal Leakage)
   
   # Categorical columns for One-Hot Encoding
   categorical_columns:
@@ -44,6 +50,8 @@ validation_size: 0.20  # 20% of training data for validation
 
 # Experiment Grid
 experiments:
+  n_seeds: 5          # Number of random seeds for robustness
+  n_jobs: -1          # Parallel jobs (-1 = all cores)
   tasks:
     - binary
     - multi
