--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 # Core Data Science
-pandas==2.3.3
-numpy==2.2.4
+pandas>=2.0.0
+numpy>=1.24.0
 
 # Machine Learning
-scikit-learn==1.7.2
-xgboost==3.1.2
+scikit-learn>=1.3.0
+xgboost>=2.0.0
 
 # Imbalanced Learning
-imbalanced-learn==0.14.1
+imbalanced-learn>=0.11.0
 
 # Visualization
-matplotlib==3.10.1
-seaborn==0.13.2
+matplotlib>=3.7.0
+seaborn>=0.13.0
 
 # Configuration
-PyYAML==6.0.3
+PyYAML>=6.0.0
 
 # Utilities
-joblib==1.5.2
-tqdm==4.67.1
-python-dotenv==1.2.1
+joblib>=1.3.0
+tqdm>=4.66.0
+python-dotenv>=1.0.0
