--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,8 @@ PyYAML>=6.0.0
 # Utilities
 joblib>=1.3.0
 tqdm>=4.66.0
-python-dotenv>=1.0.0
+
+# Documentation
+mkdocs>=1.5.0
+mkdocs-material>=9.4.0
+mkdocstrings[python]>=0.23.0
